--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,7 @@
   <title>My JavaScript App</title>
 </head>
 <body>
-  <h1>My JavaScript App</h1>
-  <p>This app was compiled using the Babel Webpack Starter Pack which can compile ES2015, ES2016 and ES2017 code including Async/Await</p>
-  
-  <script src="build/app.bundle.js"></script>
+  <div id="root"></div>
+  <script src="../dist/app.bundle.js"></script>
 </body>
 </html>
